# 3d-engine

./: CMakeLists.txt  README.md  build.sh  imgui.ini  scene.json
lib/glad/: glad.c  glad.h
lib/imgui/: imgui_demo.cpp
lib/imgui/backends/: imgui_impl_glfw.cpp  imgui_impl_opengl3.cpp
lib/imgui/docs/: CHANGELOG.txt
src/: Main.cpp
src/Engine/: Engine.cpp  Engine.hpp  Globals.cpp  Globals.hpp  Include.cpp  Include.hpp
src/Engine/ECS/: ComponentManagement.cpp  ComponentManagement.hpp  EntityManagement.cpp  EntityManagement.hpp
src/Engine/ECS/Components/: AABBComponent.cpp  AABBComponent.hpp  CameraComponent.cpp  CameraComponent.hpp  LightComponent.cpp  LightComponent.hpp  OBBComponent.cpp  OBBComponent.hpp  PlayerComponent.cpp  PlayerComponent.hpp  RayComponent.cpp  RayComponent.hpp  RigidBodyComponent.cpp  RigidBodyComponent.hpp
src/Engine/Models/: RawModel.cpp  RawModel.hpp  TexturedModel.cpp  TexturedModel.hpp
src/Engine/Other/: Input.cpp  Input.hpp  MainFunctions.cpp  MainFunctions.hpp  Math.cpp  Math.hpp  MouseRay.cpp  MouseRay.hpp  Printer.cpp  Printer.hpp  Settings.cpp  Settings.hpp
src/Engine/Physics/: Physics.cpp  Physics.hpp
src/Engine/Rendering/: DisplayManager.cpp  DisplayManager.hpp  EntityRenderer.cpp  EntityRenderer.hpp  Loader.cpp  Loader.hpp  MasterRenderer.cpp  MasterRenderer.hpp  OBJLoader.cpp  OBJLoader.hpp
src/Engine/Shaders/: Fragment.glsl  ShaderProgram.cpp  ShaderProgram.hpp  StaticShader.cpp  StaticShader.hpp  Vertex.glsl
src/Engine/Utilities/: SaveSystem.cpp  SaveSystem.hpp
src/Game/: Game.cpp  Game.hpp
(+26 files in other folders)
